--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -96,11 +96,26 @@ jobs:
            echo "::set-output name=acr_password::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value | xargs`"
            echo "::add-mask::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value | xargs`" 
 
-    - name: 'Deploy to Azure Web App for Container'
-      uses: azure/webapps-deploy@v2
-      with: 
-        app-name: ${{ env.APPNAME }} 
-        images: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+    #- name: 'Deploy to Azure Web App for Container'
+    #  uses: azure/webapps-deploy@v2
+    #  with: 
+    #    app-name: ${{ env.APPNAME }} 
+    #    images: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+
+    - name: Create Azure Container App Review Revisions
+      uses: Azure/aca-review-apps@v0.2.1
+      with:
+        # Name of the Resource Group in which the Container App will be created
+        resource-group: 'rg-AzureWebAppforContainers'
+        # Name of the Container App
+        name: 'azurecontainerapp-rpagels'
+        # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
+        image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+        # Suffixes for New Revision or Target Revision of deactivation. If the `mode` input is `deactivate-revision`, this input needs to be set.
+        revision-name-suffix: 'Staging'
+        # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
+        #deactivate-revision-mode: # optional
+    
 
   FunctionalTests:
     name: Functional tests
