--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - master
 
+  # Allow mannually trigger 
+  workflow_dispatch: 
+  
 env:
   APPNAME: AzureWebAppforContainers
   APPLICATIONPATH: Application
