--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -73,7 +73,7 @@ jobs:
         docker push ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
 
   deploy:
-    name: Deploy application to AKS
+    name: Deploy App to Container App
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -115,7 +115,7 @@ jobs:
         # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
         image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
         # Suffixes for New Revision or Target Revision of deactivation. If the `mode` input is `deactivate-revision`, this input needs to be set.
-        revision-name-suffix: 'Staging'
+        revision-name-suffix: 'staging'
         # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
         #deactivate-revision-mode: # optional
     
