--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -185,11 +185,11 @@ jobs:
     #    template: ./ArmTemplates/container-webapp-template.json
     #    parameters: webAppName="${{ env.APPNAME }}" hostingPlanName="${{ env.HOSTINGPLAN }}" sku="${{ env.SKU }}" appInsightsLocation="${{ env.APPINSIGHTSLOCATION }}" registryName="${{ env.REGISTRYNAME }}" imageName="${{ env.IMAGENAME }}" registryLocation="${{ env.REGISTRYLOCATION }}" registrySku="${{ env.REGISTRYSKU }}"
 
-    - name: 'Deploy to Azure Web App for Container'
-      uses: azure/webapps-deploy@v2
-      with: 
-        app-name: ${{ env.APPNAME }} 
-        images: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+    # - name: 'Deploy to Azure Web App for Container'
+    #   uses: azure/webapps-deploy@v2
+    #   with: 
+    #     app-name: ${{ env.APPNAME }} 
+    #     images: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
         
   deploy_application_to_containerapp:
     name: Deploy App to Container App
@@ -210,44 +210,44 @@ jobs:
     #       echo "::set-output name=acr_password::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value | xargs`"
     #       echo "::add-mask::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value | xargs`" 
 
-    - name: Deploy Azure Container App Review Revisions
-      uses: Azure/aca-review-apps@v0.2.1
-      with:
-        # Name of the Resource Group in which the Container App will be created
-        resource-group: ${{ env.RESOURCEGROUPNAME }}
-        # Name of the Container App
-        name: 'azurecontainerapp-rpagels'
-        # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
-        # image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
-        image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:latest
-        # Suffixes for New Revision or Target Revision of deactivation. If the `mode` input is `deactivate-revision`, this input needs to be set.
-        revision-name-suffix: 'staging'
-        # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
-        #deactivate-revision-mode: # optional
+    # - name: Deploy Azure Container App Review Revisions
+    #   uses: Azure/aca-review-apps@v0.2.1
+    #   with:
+    #     # Name of the Resource Group in which the Container App will be created
+    #     resource-group: ${{ env.RESOURCEGROUPNAME }}
+    #     # Name of the Container App
+    #     name: 'azurecontainerapp-rpagels'
+    #     # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
+    #     # image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+    #     image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:latest
+    #     # Suffixes for New Revision or Target Revision of deactivation. If the `mode` input is `deactivate-revision`, this input needs to be set.
+    #     revision-name-suffix: 'staging'
+    #     # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
+    #     #deactivate-revision-mode: # optional
     
 
-  FunctionalTests:
-    name: Functional tests
-    runs-on: windows-latest
-    needs: [deploy_application_to_webapp, deploy_application_to_containerapp]
-    steps:
-    - uses: actions/checkout@master
+  # FunctionalTests:
+  #   name: Functional tests
+  #   runs-on: windows-latest
+  #   needs: [deploy_application_to_webapp, deploy_application_to_containerapp]
+  #   steps:
+  #   - uses: actions/checkout@master
 
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
+  #   - name: Setup .NET Core
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: ${{ env.DOTNET_VERSION }}
 
-    - name: Update web app url in Run Settings
-      shell: powershell
-      run: |
-          cd Application\aspnet-core-dotnet-core.FunctionalTests
-          [xml]$runSetting = Get-Content functionalTests.runsettings
-          $runSetting.RunSettings.TestRunParameters.ChildNodes.Item(0).value = 'https://${{ env.APPNAME }}.azurewebsites.net/'
-          $runSetting.Save("$(pwd)/functionalTests.runsettings")
+  #   - name: Update web app url in Run Settings
+  #     shell: powershell
+  #     run: |
+  #         cd Application\aspnet-core-dotnet-core.FunctionalTests
+  #         [xml]$runSetting = Get-Content functionalTests.runsettings
+  #         $runSetting.RunSettings.TestRunParameters.ChildNodes.Item(0).value = 'https://${{ env.APPNAME }}.azurewebsites.net/'
+  #         $runSetting.Save("$(pwd)/functionalTests.runsettings")
 
-    - name: Run tests
-      continue-on-error: false
-      run: |
-          cd Application\aspnet-core-dotnet-core.FunctionalTests
-          dotnet test aspnet-core-dotnet-core.FunctionalTests.csproj -s functionalTests.runsettings
+  #   - name: Run tests
+  #     continue-on-error: false
+  #     run: |
+  #         cd Application\aspnet-core-dotnet-core.FunctionalTests
+  #         dotnet test aspnet-core-dotnet-core.FunctionalTests.csproj -s functionalTests.runsettings
