--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -27,8 +27,61 @@ env:
   Azure_Resource_GroupLocation: 'eastus2'
   
 jobs:
+  deploy_infrastructure:
+    runs-on: ubuntu-latest
+    outputs:
+      output_apiServiceName: ${{ steps.Infra.outputs.out_apiServiceName }}
+      output_webSiteName: ${{ steps.Infra.outputs.out_webSiteName }}
+      output_appInsightsApplicationId: ${{ steps.Infra.outputs.out_appInsightsApplicationId }}
+      output_appInsightsAPIApplicationId: ${{ steps.Infra.outputs.out_appInsightsAPIApplicationId }}
+      output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}
+
+    name: Deploy Infrastructure
+    steps:
+    - uses: actions/checkout@master
+
+    - name: Azure authentication
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Ensure Resource Group Exists
+      uses: Azure/CLI@v1
+      continue-on-error: true
+      with:
+        inlineScript: |
+          #!/bin/bash
+          az group create --name ${{ env.Azure_Resource_GroupName }} --location ${{ inputs.resource-group-location }}
+
+      # Deploy ARM Template using Bicep DSL
+    - name: Infrastructure
+      id: Infra
+      uses: azure/arm-deploy@v1
+      continue-on-error: false
+      with:
+        resourceGroupName: ${{ env.Azure_Resource_GroupName }}
+        template: ./IaC/main-1.bicep
+        #parameters: ./IaC/main-1.params.json
+        deploymentMode: Incremental
+        failOnStdErr: false
+
+    - name: Ensure Resource Group is Locked
+      uses: Azure/CLI@v1
+      continue-on-error: true
+      with:
+        inlineScript: |
+          az group lock create --lock-type CanNotDelete --name DontDeleteMe --resource-group ${{ env.Azure_Resource_GroupName }} --notes 'Prevent deletion of the resource group'
+
+    - name: DEBUG ONLY Display Output Variables
+      run: |
+         echo 'output_webSiteName: ${{ steps.Infra.outputs.out_webSiteName }}'
+         echo 'output_appInsightsApplicationId: ${{ steps.Infra.outputs.out_appInsightsApplicationId }}'
+         echo 'output_appInsightsAPIApplicationId: ${{ steps.Infra.outputs.out_appInsightsAPIApplicationId }}'
+         echo 'output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}'
+
   build:
     name: Build and push application to ACR
+    needs: deploy_infrastructure
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
@@ -100,77 +153,13 @@ jobs:
     #    #docker tag ${{ env.IMAGENAME }}:${{ github.sha }} ${{ env.IMAGENAME }}:latest
     #    docker push ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
 
-  deploy_infrastructure:
-    runs-on: ubuntu-latest
-    outputs:
-      output_apiServiceName: ${{ steps.Infra.outputs.out_apiServiceName }}
-      output_webSiteName: ${{ steps.Infra.outputs.out_webSiteName }}
-      output_appInsightsApplicationId: ${{ steps.Infra.outputs.out_appInsightsApplicationId }}
-      output_appInsightsAPIApplicationId: ${{ steps.Infra.outputs.out_appInsightsAPIApplicationId }}
-      output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}
-
-    name: Deploy Infrastructure
-    needs: build
-    steps:
-    - uses: actions/checkout@master
-
-    - name: Azure authentication
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Ensure Resource Group Exists
-      uses: Azure/CLI@v1
-      continue-on-error: true
-      with:
-        inlineScript: |
-          #!/bin/bash
-          az group create --name ${{ env.Azure_Resource_GroupName }} --location ${{ inputs.resource-group-location }}
-
-
-    #- uses: azure/arm-deploy@v1
-    #  id: deploy
-    #  with:
-    #    subscriptionId: ${{ env.SUBSCRIPTIONID }}
-    #    resourceGroupName: ${{ env.RESOURCEGROUPNAME }}
-    #    template: ./ArmTemplates/container-webapp-template.json
-    #    parameters: webAppName="${{ env.APPNAME }}" hostingPlanName="${{ env.HOSTINGPLAN }}" sku="${{ env.SKU }}" appInsightsLocation="${{ env.APPINSIGHTSLOCATION }}" registryName="${{ env.REGISTRYNAME }}" imageName="${{ env.IMAGENAME }}" registryLocation="${{ env.REGISTRYLOCATION }}" registrySku="${{ env.REGISTRYSKU }}"
- 
-       ###########################################
-      # Deploy ARM Template using Bicep DSL
-      ###########################################
-    - name: Infrastructure
-      id: Infra
-      uses: azure/arm-deploy@v1
-      continue-on-error: false
-      with:
-        resourceGroupName: ${{ env.Azure_Resource_GroupName }}
-        template: ./IaC/main-1.bicep
-        #parameters: ./IaC/main-1.params.json
-        deploymentMode: Incremental
-        failOnStdErr: false
-
-    - name: Ensure Resource Group is Locked
-      #if: contains(github.event_name, 'push')
-      uses: Azure/CLI@v1
-      continue-on-error: true
-      with:
-        inlineScript: |
-          az group lock create --lock-type CanNotDelete --name DontDeleteMe --resource-group ${{ env.Azure_Resource_GroupName }} --notes 'Prevent deletion of the resource group'
-
-    - name: DEBUG ONLY Display Output Variables
-      run: |
-         echo 'output_webSiteName: ${{ steps.Infra.outputs.out_webSiteName }}'
-         echo 'output_appInsightsApplicationId: ${{ steps.Infra.outputs.out_appInsightsApplicationId }}'
-         echo 'output_appInsightsAPIApplicationId: ${{ steps.Infra.outputs.out_appInsightsAPIApplicationId }}'
-         echo 'output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}'
-
   deploy_application_to_webapp:
     name: Deploy App to Web App
     needs: deploy_infrastructure
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Azure authentication
       uses: azure/login@v1
@@ -196,7 +185,8 @@ jobs:
     needs: deploy_infrastructure
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Azure authentication
       uses: azure/login@v1
