--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -25,10 +25,85 @@ env:
   dotnet_version: '6.x.x'
   Azure_Resource_GroupName: 'rg-AzureWebAppforContainers'
   Azure_Resource_GroupLocation: 'eastus2'
+  CONFIGURATION: Release
   
 jobs:
+  build:
+    name: Build and push application to ACR
+    #needs: deploy_infrastructure
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.dotnet_version }}
+          
+    - name: Azure authentication
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Restore
+      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+
+    ## SubscriptionKey
+    - name: Build
+      run: dotnet build ./aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj --configuration ${{ env.CONFIGURATION }} --no-restore
+
+      ###########################################
+      # Upload Artifacts
+      ###########################################
+    - name: Upload Build Artifacts-Website
+      uses: actions/upload-artifact@v2
+      with:
+        name: aspnet-core-dotnet-core-net6
+        path: ${{ github.workspace }}/web
+
+    - name: Upload Infrastucture Files
+      uses: actions/upload-artifact@v2
+      with:
+        name: IaC
+        path: ${{ github.workspace }}/IaC/*.*
+          
+    # Create Azure container registry
+    #- uses: azure/arm-deploy@v1
+    #  id: createAcr
+    ##  with:
+    #    subscriptionId: ${{ env.SUBSCRIPTIONID }}
+    #    resourceGroupName: ${{ env.RESOURCEGROUPNAME }}
+    #    template: ./ArmTemplates/containerRegistry-template.json
+    #    parameters: registryName="${{ env.REGISTRYNAME }}" registryLocation="${{ env.REGISTRYLOCATION }}" registrySku="${{ env.REGISTRYSKU }}"
+
+    #- name: Fetch ACR credentials
+    #  id: acrCredentials
+    #  continue-on-error: false
+    #  run: |
+    #      echo "::set-output name=acr_username::`az acr credential show -n ${{ env.REGISTRYNAME }} --query username`"
+    #      echo "::set-output name=acr_password::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value`"
+    #      echo "::add-mask::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value`"
+
+    #- name: ACR authentication
+    #  uses: azure/docker-login@v1
+    #  with:
+    #    login-server: ${{ env.REGISTRYNAME }}.azurecr.io
+    #    username: ${{ steps.acrCredentials.outputs.acr_username }}
+    #    password: ${{ steps.acrCredentials.outputs.acr_password }}
+
+    #- name: Docker Build & Push to ACR
+    #  run: |
+    #    docker login ${{ env.REGISTRYNAME }}.azurecr.io --username ${{ steps.acrCredentials.outputs.acr_username }} --password ${{ steps.acrCredentials.outputs.acr_password }}
+    #    docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+    #    #docker tag ${{ env.IMAGENAME }}:${{ github.sha }} ${{ env.IMAGENAME }}:latest
+    #    docker push ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+
   deploy_infrastructure:
     runs-on: ubuntu-latest
+    needs: build
     outputs:
       output_apiServiceName: ${{ steps.Infra.outputs.out_apiServiceName }}
       output_webSiteName: ${{ steps.Infra.outputs.out_webSiteName }}
@@ -78,80 +153,6 @@ jobs:
          echo 'output_appInsightsApplicationId: ${{ steps.Infra.outputs.out_appInsightsApplicationId }}'
          echo 'output_appInsightsAPIApplicationId: ${{ steps.Infra.outputs.out_appInsightsAPIApplicationId }}'
          echo 'output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}'
-
-  build:
-    name: Build and push application to ACR
-    needs: deploy_infrastructure
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: ${{ env.dotnet_version }}
-          
-    - name: Azure authentication
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Build and Run unit tests 
-      run: | 
-            pushd ${{ env.APPLICATIONPATH }}
-            dotnet restore
-            dotnet build --configuration Release
-            dotnet test aspnet-core-dotnet-core.UnitTests/aspnet-core-dotnet-core.UnitTests.csproj  --verbosity normal
-            popd
-
-      ###########################################
-      # Upload Artifacts
-      ###########################################
-    - name: Upload Build Artifacts-Website
-      uses: actions/upload-artifact@v2
-      with:
-        name: aspnet-core-dotnet-core
-        path: ${{ github.workspace }}/web
-
-    - name: Upload Infrastucture Files
-      uses: actions/upload-artifact@v2
-      with:
-        name: IaC
-        path: ${{ github.workspace }}/IaC/*.*
-          
-    # Create Azure container registry
-    #- uses: azure/arm-deploy@v1
-    #  id: createAcr
-    ##  with:
-    #    subscriptionId: ${{ env.SUBSCRIPTIONID }}
-    #    resourceGroupName: ${{ env.RESOURCEGROUPNAME }}
-    #    template: ./ArmTemplates/containerRegistry-template.json
-    #    parameters: registryName="${{ env.REGISTRYNAME }}" registryLocation="${{ env.REGISTRYLOCATION }}" registrySku="${{ env.REGISTRYSKU }}"
-
-    #- name: Fetch ACR credentials
-    #  id: acrCredentials
-    #  continue-on-error: false
-    #  run: |
-    #      echo "::set-output name=acr_username::`az acr credential show -n ${{ env.REGISTRYNAME }} --query username`"
-    #      echo "::set-output name=acr_password::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value`"
-    #      echo "::add-mask::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value`"
-
-    #- name: ACR authentication
-    #  uses: azure/docker-login@v1
-    #  with:
-    #    login-server: ${{ env.REGISTRYNAME }}.azurecr.io
-    #    username: ${{ steps.acrCredentials.outputs.acr_username }}
-    #    password: ${{ steps.acrCredentials.outputs.acr_password }}
-
-    #- name: Docker Build & Push to ACR
-    #  run: |
-    #    docker login ${{ env.REGISTRYNAME }}.azurecr.io --username ${{ steps.acrCredentials.outputs.acr_username }} --password ${{ steps.acrCredentials.outputs.acr_password }}
-    #    docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
-    #    #docker tag ${{ env.IMAGENAME }}:${{ github.sha }} ${{ env.IMAGENAME }}:latest
-    #    docker push ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
 
   deploy_application_to_webapp:
     name: Deploy App to Web App
